# vehicle_counter

./: CMakeLists.txt  Final_project_Proposal.docx  README.md  main.cpp
data/ground_truth/: 1_1.xml  1_2.xml  1_3.xml  1_4.xml  1_5.xml  2_1.xml  2_2.xml  2_3.xml  2_5.xml  3_1.xml  3_2.xml  3_3.xml  3_4.xml  3_5.xml  merged_annotations.xml
include/: config.hpp  detector.hpp  evaluate.hpp  logger.hpp
output/reports/: 1_0.txt  1_1.txt  1_2.txt  1_3.txt  1_4.txt  1_5.txt  2_0.txt  2_1.txt  2_2.txt  2_3.txt  2_4.txt  2_5.txt  3_0.txt  3_1.txt  3_2.txt  3_3.txt  3_4.txt  3_5.txt  vehicle_counts.txt
output/results/: 1_1.txt  1_2.txt  1_3_result.txt  1_4_result.txt  1_5.txt  1_5_result.txt  2_0_result.txt  2_1.txt  2_1_result.txt  2_2.txt  2_2_result.txt  2_3.txt  2_3_result.txt  2_4.txt  2_4_result.txt  2_5.txt  2_5_result.txt  3_0_result.txt  3_0_results.txt  3_1.txt  3_1_result.txt  3_2.txt  3_2_result.txt  3_3.txt  3_3_result.txt  3_4_result.txt  3_5.txt  3_5_result.txt
src/: detector.cpp  evaluate.cpp
